# calendar_project

./: README.md
calendar_project/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_extended.txt  DEVELOPMENT_GUIDE.md  EXTENSION_PLAN.md  EXTENSION_SUMMARY.md  LICENSE  README.md  TESTING_GUIDE.md  create_dmg.sh  create_pkg.sh  demo_extensions  demo_extensions.c  fix_persian_accuracy  fix_persian_accuracy.c  install.sh  package.sh  run_all_tests.sh  test_accuracy  test_quick  uninstall.sh
calendar_project/cmake/: calendar-config.cmake.in
calendar_project/data/: chinese_calendar_data.txt  holidays.csv
calendar_project/docs/: ALGORITHMS.md  API.md  Doxyfile.in  USAGE.md
calendar_project/include/: calendar_types_extended.h
calendar_project/multi-calendar-system-2.0.0/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  README.md  calendar-config.cmake  calendar-targets.cmake  timezone_data.txt
calendar_project/multi-calendar-system-2.0.0/Testing/Temporary/: CTestCostData.txt
calendar_project/multi-calendar-system-2.0.0/include/: calendar_types.h
calendar_project/multi-calendar-system-2.0.0/src/: gui_main.m  main.c
calendar_project/multi-calendar-system-2.0.0/src/astronomy/: lunar_calc.c  lunar_calc.h
calendar_project/multi-calendar-system-2.0.0/src/calendars/: chinese.h  gregorian.c  islamic.h  lunar_base.h
calendar_project/multi-calendar-system-2.0.0/src/export/: calendar_export.c  calendar_export.h
calendar_project/multi-calendar-system-2.0.0/src/gui/: Info.plist.in  gtk_calendar.c  gtk_calendar.h
calendar_project/multi-calendar-system-2.0.0/src/holidays/: holiday_db.h
calendar_project/multi-calendar-system-2.0.0/src/ui/: console_ui.c
calendar_project/multi-calendar-system-2.0.0/src/utils/: date_utils.h  string_utils.c
calendar_project/src/: main_extended.c
calendar_project/src/astronomy/: lunar_calc.c  solar_calc.h
calendar_project/src/calendars/: calendar_registry.h  chinese.c  gregorian.h  hebrew.c  hebrew.h  islamic.c  lunar_base.c  persian.c  persian.h
calendar_project/src/export/: calendar_export.c
calendar_project/src/gui/: cocoa_calendar.h  cocoa_calendar.m
calendar_project/src/holidays/: holiday_db.c
calendar_project/src/religious/: prayer_times.h
calendar_project/src/timezone/: timezone.c  timezone.h
calendar_project/src/ui/: console_ui.h
calendar_project/src/utils/: date_utils.c  string_utils.h
calendar_project/tests/: quick_test.sh  test_accuracy_validation.c  test_chinese.c  test_gregorian.c  test_islamic.c  test_persian  test_persian_simple.c  test_runner.c
